--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
@@ -7,7 +7,10 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @if (@User.HasActionPermission(Request.RequestContext, "Create"))
+    {
+        @Html.ActionLink("Create New", "Create")
+    }    
 </p>
 
 <form method="get" action="@Url.Action("Index")"
