--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
@@ -6,7 +6,8 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -27,7 +28,7 @@
             @Html.LabelFor(model => model.Content)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Content)
+            @Html.TextAreaFor(model => model.Content, new { @class = "expandableTextarea" })
             @Html.ValidationMessageFor(model => model.Content)
         </div>
 
