--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
@@ -12,8 +12,8 @@
             </div>
 
             <div class="display-area">
-                @{var excerpt = item.Content.GetExcerpt() + " [...] ";}
-                @Html.DisplayFor(m => excerpt)
+                @item.Excerpt.ToSafeMarkdown()
+                [...]
             </div>
             <div class="display-actions">
                 @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
