--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Post a new comment</h2>
 
 @{
     var returnQueryString = HttpUtility.ParseQueryString(Request.QueryString.ToString());
@@ -16,10 +16,7 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Comment</legend>
-
-        <div class="editor-label">
+            <div class="editor-label">
             @Html.LabelFor(model => model.Content)
         </div>
         <div class="editor-field">
@@ -28,9 +25,8 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Post" />
         </p>
-    </fieldset>
 }
 
 <div>
