--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Index.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Index.cshtml
@@ -10,18 +10,26 @@
 
     @foreach (var item in Model)
     {
-        <div class="comment-details">
-            <div id="comment-@item.Id" class="display-area">
-                @item.Content.ToSafeMarkdown()
-            </div>
-
+        <div class="comment">
             <div class="comment-details">
                 User /*todo: implement user*/ commented on @Html.ActionLink(@item.Post.Title, "Details", "BlogPost", new { id = item.Post.Id }, null) at @item.CreatedDate
             </div>
 
-            <div>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            <div id="comment-@item.Id" class="display-area">
+                @item.Content.ToSafeMarkdown()
+            </div>
+
+            <div class="comment-actions">
+                @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                    @:|
+                }
+
+                @if (@User.HasActionPermission(Request.RequestContext, "Delete"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                }
             </div>
         </div>
     }
