--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
@@ -16,17 +16,17 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-            <div class="editor-label">
-            @Html.LabelFor(model => model.Content)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Content)
-            @Html.ValidationMessageFor(model => model.Content)
-        </div>
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Content)
+    </div>
+    <div class="editor-field">
+        @Html.TextAreaFor(model => model.Content, new { @class = "expandableTextarea" })
+        @Html.ValidationMessageFor(model => model.Content)
+    </div>
 
-        <p>
-            <input type="submit" value="Post" />
-        </p>
+    <p>
+        <input type="submit" value="Post" />
+    </p>
 }
 
 <div>
