--- a/C#/Desktop/LightPlayer/LightPlayer/Views/Folders.xaml
+++ b/C#/Desktop/LightPlayer/LightPlayer/Views/Folders.xaml
@@ -5,10 +5,26 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-	Title="Folders"
+      Title="Folders"
       DataContext="{Binding Source={StaticResource Locator}, Path=FoldersViewModel}">
 
     <Grid>
-        <TextBlock>//TODO Implement folder list here</TextBlock>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="8*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0" VerticalAlignment="Center">Playlists</TextBlock>
+        <ListView Grid.Row="1" ItemsSource="{Binding Models}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Button Content="{Binding Path}"/>
+                    <!--TODO Implement command binding-->
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <Button Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Add folder"/>
     </Grid>
 </Page>
