--- a/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
+++ b/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
@@ -17,6 +17,7 @@
         <MediaElement Grid.Row="0" Name="media" Source="{Binding CurrentlyPlaying}" LoadedBehavior="Manual" UnloadedBehavior="Stop"/>
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Button Content=">" Command="{Binding CommandPlay}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
+            <Button Content="." Command="{Binding CommandStop}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
         </StackPanel>
         <ListView Grid.Row="1" ItemsSource="{Binding Folder.Files}" SelectedItem="{Binding CurrentlyPlaying}">
             <ListView.ItemTemplate>
