Fix Playlist display

--- a/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
+++ b/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
@@ -29,7 +29,7 @@
             <Button Content=">" Command="{Binding CommandPlay}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
             <Button Content="." Command="{Binding CommandStop}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
         </StackPanel>
-        <ListView Grid.Row="1" ItemsSource="{Binding Folder.Files}" SelectedItem="{Binding CurrentlyPlaying}" ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <ListView Grid.Row="1" ItemsSource="{Binding Playlist.Folder.Files}" SelectedItem="{Binding CurrentlyPlaying}" ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid Height="20">
