Add Pause command to the UI and improve the Frontend for playlist

--- a/C#/Desktop/LightPlayer/LightPlayer/Styles.xaml
+++ b/C#/Desktop/LightPlayer/LightPlayer/Styles.xaml
@@ -8,5 +8,8 @@
         </Style.Triggers>
         <Setter Property="Foreground" Value="DarkBlue" />
         <Setter Property="TextBlock.TextDecorations" Value="{x:Null}" />
-    </Style>    
+    </Style>
+    <Style x:Name="buttons" TargetType="{x:Type Button}" >
+        <Setter Property="Margin" Value="5,10,5,10"/>
+    </Style>
 </ResourceDictionary>
