--- a/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
+++ b/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
@@ -12,8 +12,8 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" MinHeight="40"/>
+            <RowDefinition Height="12*"/>
         </Grid.RowDefinitions>
 
         <MediaElement Grid.Row="0" Name="media"
@@ -28,6 +28,7 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Button Content=">" Command="{Binding CommandPlay}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
             <Button Content="." Command="{Binding CommandStop}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
+            <Button Content="||" Command="{Binding CommandPause}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
         </StackPanel>
         <ListView Grid.Row="1" ItemsSource="{Binding Playlist.Folder.Files}" SelectedItem="{Binding CurrentlyPlaying}" ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListView.ItemTemplate>
