--- a/MVC/4/DomeApp/DomeApp/Views/Account/Manage.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/Manage.cshtml
@@ -3,18 +3,16 @@
     ViewBag.Title = "Manage Account";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
+<p>@ViewBag.Title</p>
 
-<p class="message-success">@ViewBag.StatusMessage</p>
+<p>@ViewBag.StatusMessage</p>
 
 <p>You're logged in as <strong>@User.Identity.Name</strong>.</p>
 
 <section id="externalLogins">
     @Html.Action("RemoveExternalLogins")
 
-    <h3>Add an external login</h3>
+    <p>Add an external login</p>
     @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
 </section>
 
