--- a/MVC/4/DomeApp/DomeApp/Views/Account/Login.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/Login.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Log in";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
+<p>@ViewBag.Title</p>
 
-<section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
+<section id="socialLoginForm">
+    <p>Use another service to log in.</p>
     @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
 </section>
 
