--- a/MVC/4/DomeApp/DomeApp/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -2,33 +2,25 @@
 
 @if (Model.Count > 0)
 {
-    <h3>Registered external logins</h3>
-    <table>
-        <tbody>
-        @foreach (DomeApp.Models.ExternalLogin externalLogin in Model)
+    <p>Registered external logins</p>
+    @foreach (DomeApp.Models.ExternalLogin externalLogin in Model)
+    {
+        @Html.Display(externalLogin.ProviderDisplayName)
+        @if (ViewBag.ShowRemoveButton)
         {
-            <tr>
-                <td>@externalLogin.ProviderDisplayName</td>
-                <td>
-                    @if (ViewBag.ShowRemoveButton)
-                    {
-                        using (Html.BeginForm("Disassociate", "Account"))
-                        {
-                            @Html.AntiForgeryToken()
-                            <div>
-                                @Html.Hidden("provider", externalLogin.Provider)
-                                @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
-                                <input type="submit" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
-                            </div>
-                        }
-                    }
-                    else
-                    {
-                        @: &nbsp;
-                    }
-                </td>
-            </tr>
+            using (Html.BeginForm("Disassociate", "Account"))
+            {
+                @Html.AntiForgeryToken()
+                <div>
+                    @Html.Hidden("provider", externalLogin.Provider)
+                    @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
+                    <input type="submit" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
+                </div>
+            }
         }
-        </tbody>
-    </table>
+        else
+        {
+            @: &nbsp;
+        }
+    }
 }
