--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Create.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<p>@ViewBag.Title</p>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -13,18 +13,14 @@
     <fieldset>
         <legend>BlogPost</legend>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Title)
-        </div>
-        <div class="editor-field">
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Content)
-        </div>
-        <div class="editor-field">
             @Html.TextAreaFor(model => model.Content, new { @class = "expandableTextarea" })
             @Html.ValidationMessageFor(model => model.Content)
         </div>
