--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Delete.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Delete.cshtml
@@ -4,30 +4,28 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<p>@ViewBag.Title</p>
 
-<h3>Are you sure you want to delete this?</h3>
+<p>Are you sure you want to delete this?</p>
 <fieldset>
     <legend>BlogPost</legend>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Title)
-    </div>
-    <div class="display-field">
+    <div>
+        @Html.DisplayNameFor(model => model.Title)
         @Html.DisplayFor(model => model.Title)
     </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Content)
-    </div>
-    <div class="display-field">
+    <div>
+        @Html.DisplayNameFor(model => model.Content)
         @Html.DisplayFor(model => model.Content)
     </div>
 </fieldset>
-@using (Html.BeginForm()) {
+
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
+        <input type="submit" value="Delete" />
         @Html.ActionLink("Back to List", "Index")
     </p>
 }
