--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
@@ -4,9 +4,11 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<p>@ViewBag.Title</p>
 
-@{var editorAreaAttributes = new { @class = "expandableTextarea", rows = 20, columns = 20 };}
+@{
+    var editorAreaAttributes = new { @class = "expandableTextarea", rows = 20, columns = 20 };
+}
 
 @using (Html.BeginForm())
 {
@@ -17,26 +19,20 @@
 
         @Html.HiddenFor(model => model.Id)
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Title)
-        </div>
-        <div class="editor-field">
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Excerpt)
-        </div>
-        <div class="editor-field">
             @Html.TextAreaFor(model => model.Excerpt, editorAreaAttributes)
             @Html.ValidationMessageFor(model => model.Excerpt)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Content)
-        </div>
-        <div class="editor-field">
             @Html.TextAreaFor(model => model.Content, editorAreaAttributes)
             @Html.ValidationMessageFor(model => model.Content)
         </div>
