--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<p>@ViewBag.Title</p>
 
 <p>
     @if (@User.HasActionPermission(Request.RequestContext, "Create"))
