--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
@@ -5,36 +5,29 @@
     @foreach (var item in Model)
     {
         <div>
-            <div class="display-title">
-                <h3>
-                    @Html.DisplayFor(m => item.Title)
-                </h3>
-            </div>
+            <p>@Html.DisplayFor(m => item.Title)</p>
 
-            <div class="display-area">
+            <div>
                 @item.Excerpt.ToSafeMarkdown()
-                [...]
             </div>
 
-            @((item.Comments ?? Enumerable.Empty<Comment>()).Count()) comments
+            <p>@((item.Comments ?? Enumerable.Empty<Comment>()).Count()) comments<p>
 
-            <div class="display-actions">
+            <div>
                 @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
                 {
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                    @:|
                 }
 
                 @Html.ActionLink("Read Further", "Details", new { id = item.Id })
 
                 @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
                 {
-                    @:|
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 }
             </div>
         </div>
     }
 
-    @Html.Partial("Pager", new Tuple<IPagedList, string,string>(Model, "Index", "posts"))
+    @Html.Partial("Pager", new Tuple<IPagedList, string, string>(Model, "Index", "posts"))
 </div>
