--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Post a new comment</h2>
+<p>@ViewBag.Title</p>
 
 @if (!Request.IsAuthenticated)
 {
@@ -21,10 +21,8 @@ else
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true)
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Content)
-        </div>
-        <div class="editor-field">
             @Html.TextAreaFor(model => model.Content, new { @class = "expandableTextarea" })
             @Html.ValidationMessageFor(model => model.Content)
         </div>
