--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Delete.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Delete.cshtml
@@ -4,20 +4,19 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<p>@ViewBag.Title</p>
 
-<h3>Are you sure you want to delete this?</h3>
+<p>Are you sure you want to delete this?</p>
 <fieldset>
     <legend>Comment</legend>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Content)
-    </div>
-    <div class="display-field">
+    <div>
+        @Html.DisplayNameFor(model => model.Content)
         @Html.DisplayFor(model => model.Content)
     </div>
 </fieldset>
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     <p>
         <input type="submit" value="Delete" /> |
