--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Edit.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Edit.cshtml
@@ -4,9 +4,10 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<p>@ViewBag.Title</p>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -15,10 +16,8 @@
 
         @Html.HiddenFor(model => model.Id)
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Content)
-        </div>
-        <div class="editor-field">
             @Html.EditorFor(model => model.Content)
             @Html.ValidationMessageFor(model => model.Content)
         </div>
